--- a/_posts/2018-07-09-leetCode.md
+++ b/_posts/2018-07-09-leetCode.md
@@ -1,7 +1,7 @@
 ---
 layout:     post
 title:      "leetCode刷题之路"
-subtitle:   "从零开始"
+subtitle:   "第1题 两数相加"
 date:       2018-07-08
 author:     "msg"
 header-img: "img/post-bg-unix-linux.jpg"
@@ -10,8 +10,6 @@ tags:
     - algorithm
     - NLP
 ---
-
-### 第1题 两数相加
 
 #### 问题描述：
 > 给定一个整数数组和一个目标值，找出数组中和为目标值的两个数。\\
