--- a/_posts/2018-07-17-Unbroken.md
+++ b/_posts/2018-07-17-Unbroken.md
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:      "unbroken"
+title:      "Unbroken"
 subtitle:   "坚不可摧"
 date:       2018-07-17
 author:     "msg"
@@ -15,212 +15,212 @@ tags:
 
 You can’t connect the dots looking forward, you can only connect them looking backwards.
 
-> 你无法把过去的点滴与未来联系，只有透过回顾才能看见。
+你无法把过去的点滴与未来联系，只有透过回顾才能看见。
 
 So you have to trust that the dots will somehow connect in your future.
 
-> 所以你必须相信过去的点滴能够串联未来。
+所以你必须相信过去的点滴能够串联未来。
 
 You have to trust in something: your gut, destiny, life, karma, whatever.
 
-> 你必须有信念，不管那是你的胆识，命运，人生，还是因果报应。
+你必须有信念，不管那是你的胆识，命运，人生，还是因果报应。
 
 Because believing that the dots will connect down the road, will give you the confidence to follow your heart, even when it lead you off the well worn path. And that will make all the difference.
 
-> 因为唯有把过去的点滴串联起来，你才能有信心忠于自我，即使你的选择和常人不同。这会使你与众不同。
+因为唯有把过去的点滴串联起来，你才能有信心忠于自我，即使你的选择和常人不同。这会使你与众不同。
 
 Your time is limited, so don’t waste it living someone else’s life.
 
-> 你的生命有限，所以不要浪费你的时间在别人的生活里。
+你的生命有限，所以不要浪费你的时间在别人的生活里。
 
 Don’t be trapped by dogma, which is living with the results of other people’s thinking.
 
-> 不要被教条束缚，不要活在别人对你的期望之中。
+不要被教条束缚，不要活在别人对你的期望之中。
 
 Don’t let the noise of others’ opinions drown out your own inner voice. You’ve got to find what you love.
 
-> 不要让来自他人的噪音抹去你自己内心的声音，你必须找到你所爱的东西。
+不要让来自他人的噪音抹去你自己内心的声音，你必须找到你所爱的东西。
 
 And that is as true for your work as it is for your lovers.
 
-> 包括你热爱的事业和你的伴侣。
+包括你热爱的事业和你的伴侣。
 
 Your work is going to fill a large part of your life and the only way to be truly satisfied is to do what you believe is great work.
 
-> 事业将占据你的大半生，唯有相信你所做的工作是对的，你才能发自内心的得到满足。
+事业将占据你的大半生，唯有相信你所做的工作是对的，你才能发自内心的得到满足。
 
 And the only way to do great work is to love what you do.
 
-> 而唯有爱你所做的事，才能成就不凡。
+而唯有爱你所做的事，才能成就不凡。
 
 If you haven’t found it yet, keep looking, and don’t settle.
 
-> 如若你还没有找到，继续寻找，别追去安逸。
+如若你还没有找到，继续寻找，别追去安逸。
 
 Have the courage to follow your heart and intuition, they somehow already know what you truly want to become.
 
-> 有勇气顺从自己的心和直觉，你的内心早就知道你未来的梦想。
+有勇气顺从自己的心和直觉，你的内心早就知道你未来的梦想。
 
 You’re going to have some ups and you’re goning to have some downs.
 
-> 你的旅途不可能一帆风顺，必然有起有落。
+你的旅途不可能一帆风顺，必然有起有落。
 
 Most people give up on themselves easily. You know the human spirit is powerful?!
 
-> 大多数人都轻易放弃，但你知道人的意志有多强大吗？
+大多数人都轻易放弃，但你知道人的意志有多强大吗？
 
 There is nothing as powerful. It’s hard to kill the human spirit!
 
-> 人的意志是无可比拟的坚韧不屈！
+人的意志是无可比拟的坚韧不屈！
 
 Anybody can feel good when they have their health, their bills are paid, they have happy relationships.
 
-> 任何人在财务、生活、感情、健康良好的环境下，都能感到幸福。
+任何人在财务、生活、感情、健康良好的环境下，都能感到幸福。
 
 Anybody can be positive then, anybody can have a larger vision then, anybody can have faith under those kinds of circumstances.
 
-> 在那样的环境下，任何人都能自得其满，任何人都能有伟大的理想，任何人都能有信念。
+在那样的环境下，任何人都能自得其满，任何人都能有伟大的理想，任何人都能有信念。
 
 The real challenge of growth, mentally, emotionally and spiritually comes when you get knocked down. It takes courage to act.
 
-> 在你被击倒时，你所面临的真正挑战是你的信念、信仰和意志。起身而行需要勇气。
+在你被击倒时，你所面临的真正挑战是你的信念、信仰和意志。起身而行需要勇气。
 
 Part of being hungry when you have been defeated.
 
-> 被击倒仍能保持谦虚，
+被击倒仍能保持谦虚，
 
 It takes courage to start over again.
 
-> 需要勇气去放下并重新开始。
+需要勇气去放下并重新开始。
 
 Fear kills dreams.
 
-> 恐惧扼杀梦想。
+恐惧扼杀梦想。
 
 Fear kills hope.Fear, put people in the hospital.
 
-> 恐惧扼杀希望，恐惧使人一蹶不振。
+恐惧扼杀希望，恐惧使人一蹶不振。
 
 Fear can age you, can hold you back from doing something that you know within yourself that you are capable of doing, but it will paralyze you.
 
-> 恐惧使你衰老，阻止你去做你能做到的事，但是它也会使你麻木不仁。
+恐惧使你衰老，阻止你去做你能做到的事，但是它也会使你麻木不仁。
 
 At the end of your feelings is nothing, but at the end of every principle is a promise.
 
-> 你的情绪跌宕起伏，但仍然一事无成，但是在每个原则之后是自我的承诺。
+你的情绪跌宕起伏，但仍然一事无成，但是在每个原则之后是自我的承诺。
 
 Behind your little feelings, it might not be absolutely nothing at the end of your little feelings.
 
-> 你的喜怒哀乐，最后可能什么都没有。
+你的喜怒哀乐，最后可能什么都没有。
 
 But behind every principle is a promise. And some of you in your life, the reason why you not at your goal right now, because you just all about your feelings.
 
-> 但是每当你下定决心，就是一种承诺。你们有些人，至今碌碌无为，原因只是你们太过于情绪化。
+但是每当你下定决心，就是一种承诺。你们有些人，至今碌碌无为，原因只是你们太过于情绪化。
 
 All on your feellings, you don’t feel like waking up, so who does?
 
-> 你总被情绪所主导，早上不愿起床，谁想呢？
+你总被情绪所主导，早上不愿起床，谁想呢？
 
 Everyday you say “no” to your dreams, you might be pushing your dreams back a whole six months, a whole year!
 
-> 每天你不愿去面对自己的梦想，你也许会把目标延后六个月，或是一年！
+每天你不愿去面对自己的梦想，你也许会把目标延后六个月，或是一年！
 
 That one single day, that one day you didn’t get up could have pushed your stuff back, I don’t know how long.
 
-> 只是那没有起身鞭策自己的一瞬间，你不知后退了多少。
+只是那没有起身鞭策自己的一瞬间，你不知后退了多少。
 
 Don’t allow your emotions to control you.
 
-> 别让你的情感控制你。
+别让你的情感控制你。
 
 We are emotional, but what you want to begin to discipline your emotion.
 
-> 我们是情感的动物，但是你必须控制你的情感。
+我们是情感的动物，但是你必须控制你的情感。
 
 If you don’t discipline and contain your emotion, they will use you.
 
-> 你若无法控制他，你便将被它吞噬。
+你若无法控制他，你便将被它吞噬。
 
 You want it, and you are going to go all out to have it.
 
-> 你想要全力以赴，毫无保留。
+你想要全力以赴，毫无保留。
 
 It’s not going to be easy, when you want to change. It’s not easy.
 
-> 当你尝试改变的时候，不会很容易。
+当你尝试改变的时候，不会很容易。
 
 If it were in fact easy, everybody would do it.
 
-> 如果很容易，那人人皆可做到。
+如果很容易，那人人皆可做到。
 
 But if you’re serious, you’ll go all out.
 
-> 但是你若认真对待，全力以赴。
+但是你若认真对待，全力以赴。
 
 I’m in control here.
 
-> 我才是自己的主宰者。
+我才是自己的主宰者。
 
 I’m not going to let this get me down, I’m not going to let this destroy me.
 
-> 我绝不会让外界事物打击我，摧毁我。
+我绝不会让外界事物打击我，摧毁我。
 
 I’m coming back!
 
-> 我将重新站起！
+我将重新站起！
 
 And I’ll be stronger and better because of it!
 
-> 我将会变得更好，更坚强！
+我将会变得更好，更坚强！
 
 You have got to make a declaration, that this is what you stand for!
 
-> 你必须要下定决心，这是你的意义!
+你必须要下定决心，这是你的意义!
 
 You’re standing up for your dreams, you’re standing up for peace of mind, you’re standing up for health.
 
-> 如果这是你想要的梦想，那不论是健康或是功成名就。
+如果这是你想要的梦想，那不论是健康或是功成名就。
 
 Take full responsibility for your life!
 
-> 请对你的人生负完全的责任！
+请对你的人生负完全的责任！
 
 Accept where you are and the responsibility that you’re going to take yourself where you want to go.
 
-> 接受现在的自己，并把坚信自己能够做得更好当作一种责任。
+接受现在的自己，并把坚信自己能够做得更好当作一种责任。
 
 You can decide that I am going to live each day as if it were my last!
 
-> 你可以选择把你的每一天当做最后一天来过！
+你可以选择把你的每一天当做最后一天来过！
 
 Live your life with passion! With some drive!
 
-> 活出你的激情！拿出你的魄力！
+活出你的激情！拿出你的魄力！
 
 Decided that you are going to push yourself.
 
-> 不断鞭策自己做得更好！
+不断鞭策自己做得更好！
 
 The last chapter to your life has not been written yet, and it doen’t matter about what happened yesterday.
 
-> 人生的最后一章尚未写下，昨天种种的事情并不重要。
+人生的最后一章尚未写下，昨天种种的事情并不重要。
 
 It doesn’t matter about what happened to you, what matter is: what are you going to do about it?
 
-> 你发生了什么也没有关系，重要的是：你接下来打算怎么做？
+你发生了什么也没有关系，重要的是：你接下来打算怎么做？
 
 This year I will make this goal become a reality.
 
-> 今年我将使梦想成为现实。
+今年我将使梦想成为现实。
 
 I won’t talk about it anymore. I can! I can!! I can!!!
 
-> 我已不想再谈论什么，我能行！我能行！！我能行！！！
+我已不想再谈论什么，我能行！我能行！！我能行！！！
 
 To persevere I think is important for everybody, don’t give up, don’t give in.
 
-> 我觉得坚持对每个人都很重要，不要放弃，不要妥协。
+我觉得坚持对每个人都很重要，不要放弃，不要妥协。
 
 There’s always an answer to everything.
 
-> 人生的每件事情总是有解答的。
+人生的每件事情总是有解答的。
