--- a/_posts/2018-07-17-Unbroken.md
+++ b/_posts/2018-07-17-Unbroken.md
@@ -4,7 +4,7 @@ title:      "Unbroken"
 subtitle:   "坚不可摧"
 date:       2018-07-17
 author:     "msg"
-header-img: "img/book.png"
+header-img: "img/book.jpg"
 tags:
     - 励志
     - 英语
