--- a/_posts/2018-07-25-qa.md
+++ b/_posts/2018-07-25-qa.md
@@ -17,8 +17,87 @@ tags:
 ---
 
 
-> 智能问答系统
+> 智能问答系统：智能问答系统越来越受到重视，工作中也一直在一线进行架构设计和编码工作。如何从零开始构建一个完整的智能问答系统，如今也有了相应的经验。目前主要从事智能客服方面的工作，最近看了一篇文章，下面记录一下。
 
-### 智能客服流程图
+## 智能客服流程图
 
 ![智能客服](/img/posts/qa.png)
+
+## 一个完整的智能客服（平台）需要的东西
+
+> 易用、易学的QA Pairs管理与查询引擎(也可以称之为知识库)
+
+知识库用于机器人管理者简单定义类似FAQ的问答，例如“怎么借款”这种有一个固定回答问题。这种存在库里的问题答案对，需要人工编辑存入，对大量重复的问题进行记录总结，然后当用户问某个问题的时候，去知识库里匹配，可以完全匹配，可以按照相似度匹配，最大子串匹配等。
+
+> 易用、易学的对话模板生成管理方法（用于生成可能的用户说的话）?
+
+机器人管理者用于生成针对对话系统（任务）的对话，这部分内容目前没有涉及，以后研究一下。
+
+> 足够使用的NLU部件
+
+内部需要包括其他各种基本组件，例如intent classification，entity recognization。意图分类是很关键的一步，直接决定了交由什么处理引擎来处理用户的问题或者指令。实体识别则代表了
+
+> 当机器人不准确、失效时，人工代替解决方案
+
+最好能即时接入人工，给用户接入人工的手段，即时评价当前对话质量，最低要求是提供其他人工渠道：电话、邮箱、IM。在智能客服系统里，这部分很重要，用户对客服回答的问题，准确率要求很高，所以一旦出现不准确的情况，将会严重影响公司。
+
+> 足够使用的对话状态跟踪部件与对话策略部件
+
+dialogue state tracker & dialogue policy
+
+> 易用、易学的自然语言生成模板方法（用于生成机器人的回复）
+
+根据当前状态，生成对应回复所需要的模板系统，回复答案，需要多样化，不能局限在某一个特定的回答不变化，那样的话失去了灵活性，用户体验会很差，当然，对于智能客服来说，这部分可以做适当取舍，毕竟用户需要知道的大部分是知识类的回答，而不是闲聊。
+
+### 用户行为模拟程序与系统评价程序
+
+行为模拟可以用于强化学习，就算不用强化学习，这套系统也是一套标准的集成测试系统
+
+### 良好的自动用户反馈、评价机制
+
+用户评价机器人好坏、反馈结果、与用户沟通联系
+
+### 一个良好的、易懂的面向开发人员文档
+
+用于帮助专业人员构建更详细、自定义的机器人
+
+### 一个良好的、易懂的面向非专业人员培训文档
+
+用户普及知识，做简单的非专业训练，让他能够很好的管理基本问答、知识库
+
+###  基于某种UI（例如web）的高级图形管理界面
+
+方便非专业人员使用
+
+###  自动的训练程序，例如基于强化学习的
+
+未测试
+
+###  足够覆盖基本问答的chatbot引擎
+
+回答一些非常基本机器人，你是谁，你从哪来，你到哪去，用于最基本的调戏、使用帮助目的
+
+###  高效的Knowledge-based QA问答引擎
+
+用于更方便的回答例如，这个东西保修几年，这双鞋有多大码的，这种更细节的知识问题
+
+###  一个简易的知识库构建与对接系统（如果需要Knowledge-based QA问答引擎的话）
+
+###  较准确的Retrival-based QA问答引擎
+
+例如用于一些百科知识问答，某些特定领域的文档问答
+
+###  人类情绪分析部件（NLU中）
+
+###  一个基于Seq2Seq的chatbot引擎
+
+###  语音识别
+
+###  人工语言合成
+
+## 必须
+
+### 部分场景可有可无
+
+### 可能需要忽略的
+
