--- a/_posts/2018-07-25-qa.md
+++ b/_posts/2018-07-25-qa.md
@@ -49,55 +49,55 @@ dialogue state tracker & dialogue policy
 
 根据当前状态，生成对应回复所需要的模板系统，回复答案，需要多样化，不能局限在某一个特定的回答不变化，那样的话失去了灵活性，用户体验会很差，当然，对于智能客服来说，这部分可以做适当取舍，毕竟用户需要知道的大部分是知识类的回答，而不是闲聊。
 
-### 用户行为模拟程序与系统评价程序
+> 用户行为模拟程序与系统评价程序
 
 行为模拟可以用于强化学习，就算不用强化学习，这套系统也是一套标准的集成测试系统
 
-### 良好的自动用户反馈、评价机制
+> 良好的自动用户反馈、评价机制
 
 用户评价机器人好坏、反馈结果、与用户沟通联系
 
-### 一个良好的、易懂的面向开发人员文档
+> 一个良好的、易懂的面向开发人员文档
 
 用于帮助专业人员构建更详细、自定义的机器人
 
-### 一个良好的、易懂的面向非专业人员培训文档
+> 一个良好的、易懂的面向非专业人员培训文档
 
 用户普及知识，做简单的非专业训练，让他能够很好的管理基本问答、知识库
 
-###  基于某种UI（例如web）的高级图形管理界面
+> 基于某种UI（例如web）的高级图形管理界面
 
 方便非专业人员使用
 
-###  自动的训练程序，例如基于强化学习的
+> 自动的训练程序，例如基于强化学习的
 
 未测试
 
-###  足够覆盖基本问答的chatbot引擎
+> 足够覆盖基本问答的chatbot引擎
 
 回答一些非常基本机器人，你是谁，你从哪来，你到哪去，用于最基本的调戏、使用帮助目的
 
-###  高效的Knowledge-based QA问答引擎
+> 高效的Knowledge-based QA问答引擎
 
 用于更方便的回答例如，这个东西保修几年，这双鞋有多大码的，这种更细节的知识问题
 
-###  一个简易的知识库构建与对接系统（如果需要Knowledge-based QA问答引擎的话）
+> 一个简易的知识库构建与对接系统（如果需要Knowledge-based QA问答引擎的话）
 
-###  较准确的Retrival-based QA问答引擎
+> 较准确的Retrival-based QA问答引擎
 
 例如用于一些百科知识问答，某些特定领域的文档问答
 
-###  人类情绪分析部件（NLU中）
+> 人类情绪分析部件（NLU中）
 
-###  一个基于Seq2Seq的chatbot引擎
+> 一个基于Seq2Seq的chatbot引擎
 
-###  语音识别
+> 语音识别
 
-###  人工语言合成
+> 人工语言合成
 
 ## 必须
 
-### 部分场景可有可无
+> 部分场景可有可无
 
-### 可能需要忽略的
+> 可能需要忽略的
 
