--- a/_posts/2018-09-07-annoy.md
+++ b/_posts/2018-09-07-annoy.md
@@ -42,9 +42,7 @@ Annoy的目标是建立一个数据结构，使得查询一个点的最近邻点
 
 ![示意图](/img/posts/annoy/01.png)
 
-2) 建立多棵二叉树树，构成一个森林，每个树建立机制都如上面所述那样。多棵树示意图如下所示：
-
-![多树示意图](/img/posts/annoy/02.png)
+2) 建立多棵二叉树树，构成一个森林，每个树建立机制都如上面所述那样。
 
 3）采用优先队列机制：采用一个优先队列来遍历二叉树，从根节点往下的路径，根据查询节点与当前分割超平面距离（margin）进行排序。
 
