--- a/_posts/2018-09-07-annoy.md
+++ b/_posts/2018-09-07-annoy.md
@@ -14,17 +14,17 @@ tags:
     - Annoy
 ---
 
-> 工作中用到Annoy，学习的过程中记录一下。
+> 工作中用到$$Annoy$$，学习的过程中记录一下。
 
-一旦文档经过word2vec变成***稠密向量***形式，如何从海量文本中快速查找出相似的$$Top(N)$$文本呢？
+一旦文档经过$$word2vec$$变成***稠密向量***形式，如何从海量文本中快速查找出相似的$$Top(N)$$文本呢？
 
 ### 建立索引过程
 
-Annoy的目标是建立一个数据结构，使得查询一个点的最近邻点的时间复杂度是次线性。Annoy通过建立一个二叉树来使得每个点查找时间复杂度是$$O(logn)$$。随机选择两个点，以这两个节点为初始中心节点，执行聚类数为2的kmeans过程，最终产生收敛后两个聚类中心点。这两个聚类中心点之间连一条线段（灰色短线），建立一条垂直于这条灰线，并且通过灰线中心点的线（黑色粗线）。这条黑色粗线把数据空间分成两部分。在多维空间的话，这条黑色粗线可以看成等距垂直超平面。
+$$Annoy$$的目标是建立一个数据结构，使得查询一个点的最近邻点的时间复杂度是次线性。$$Annoy$$通过建立一个二叉树来使得每个点查找时间复杂度是$$O(logn)$$。随机选择两个点，以这两个节点为初始中心节点，执行聚类数为$$2$$的$$kmeans$$过程，最终产生收敛后两个聚类中心点。这两个聚类中心点之间连一条线段（灰色短线），建立一条垂直于这条灰线，并且通过灰线中心点的线（黑色粗线）。这条黑色粗线把数据空间分成两部分。在多维空间的话，这条黑色粗线可以看成等距垂直超平面。
 
-在划分的子空间内进行不停的递归迭代继续划分，直到每个子空间最多只剩下K个数据节点。
+在划分的子空间内进行不停的递归迭代继续划分，直到每个子空间最多只剩下$$K$$个数据节点。
 
-通过多次递归迭代划分的话，最终原始数据会形成二叉树结构。二叉树底层是叶子节点记录原始数据节点，其他中间节点记录的是分割超平面的信息。Annoy建立这样的二叉树结构是希望满足这样的一个假设:相似的数据节点应该在二叉树上位置更接近，一个分割超平面不应该把相似的数据节点分割二叉树的不同分支上。
+通过多次递归迭代划分的话，最终原始数据会形成二叉树结构。二叉树底层是叶子节点记录原始数据节点，其他中间节点记录的是分割超平面的信息。$$Annoy$$建立这样的二叉树结构是希望满足这样的一个假设:相似的数据节点应该在二叉树上位置更接近，一个分割超平面不应该把相似的数据节点分割二叉树的不同分支上。
 
 ### 查询过程
 
@@ -34,7 +34,7 @@ Annoy的目标是建立一个数据结构，使得查询一个点的最近邻点
 
 上述描述存在两个问题：
 
-1) 查询过程最终落到叶子节点的数据节点数小于 我们需要的Top N相似邻居节点数目怎么办？
+1) 查询过程最终落到叶子节点的数据节点数小于 我们需要的$$TopN$$相似邻居节点数目怎么办？
 
 2）两个相近的数据节点划分到二叉树不同分支上怎么办？
 
@@ -46,7 +46,7 @@ Annoy的目标是建立一个数据结构，使得查询一个点的最近邻点
 
 2) 建立多棵二叉树树，构成一个森林，每个树建立机制都如上面所述那样。
 
-3）采用优先队列机制：采用一个优先队列来遍历二叉树，从根节点往下的路径，根据查询节点与当前分割超平面距离（margin）进行排序。
+3）采用优先队列机制：采用一个优先队列来遍历二叉树，从根节点往下的路径，根据查询节点与当前分割超平面距离进行排序。
 
 ### 返回最终近邻节点
 
