--- a/_posts/2018-09-07-annoy.md
+++ b/_posts/2018-09-07-annoy.md
@@ -16,7 +16,7 @@ tags:
 
 > 工作中用到$$Annoy$$，学习的过程中记录一下。
 
-一旦文档经过$$word2vec$$变成***稠密向量***形式，如何从海量文本中快速查找出相似的$$Top(N)$$文本呢？
+一旦文档经过$$word2vec$$变成***稠密向量***形式，如何从海量文本中快速查找出相似的$$TopN$$文本呢？
 
 ### 建立索引过程
 
