--- a/_posts/2018-09-20-自然语言处理工具包.md
+++ b/_posts/2018-09-20-自然语言处理工具包.md
@@ -18,18 +18,29 @@ tags:
 
 ### nltk
 
+> NLTK is a leading platform for building Python programs to work with human language data. It provides easy-to-use interfaces to over 50 corpora and lexical resources such as WordNet, along with a suite of text processing libraries for classification, tokenization, stemming, tagging, parsing, and semantic reasoning, and an active discussion forum.
+
 ### textblob
 
+> TextBlob is a Python (2 and 3) library for processing textual data. It provides a simple API for diving into common natural language processing (NLP) tasks such as part-of-speech tagging, noun phrase extraction, sentiment analysis, classification, translation, and more.
+
+TextBlob是一个很有意思的Python文本处理工具包，它其实是对Python工具包NLKT和Pattern做了封装（TextBlob stands on the giant shoulders of NLTK and pattern, and plays nicely with both），同时提供了很多文本处理功能的接口，包括词性标注，名词短语提取，情感分析，文本分类，拼写检查等，甚至包括翻译和语言检测，不过这个是基于Google的API的，有调用次数限制。
 ### spacy
 
 > spaCy是一个Python自然语言处理工具包，诞生于2014年年中，号称“Industrial-Strength Natural Language Processing in Python”，是具有工业级强度的Python NLP工具包。spaCy里大量使用了Cython来提高相关模块的性能，这个区别于学术性质更浓的Python NLTK，因此具有了业界应用的实际价值。
 
 
-
 ### gensim
+
+> Topic modeling for humans
+
+Gensim是一个相当专业的主题模型Python工具包，无论是代码还是文档。
 
 ### snownlp
 
+> SnowNLP是一个python写的类库，可以方便的处理中文文本内容。如中文分词、词性标注、情感分析、文本分类、提取文本关键词、文本相似度计算等。
+
+嗯，好处是支持中文，应该是国产，所以网上看到有人说它不好用，分词不如jieba,情感分析巨慢等。
 
 ### corenlp
 
@@ -38,3 +49,9 @@ tags:
 
 ### ansj
 
+### pattern
+
+> Pattern is a web mining module for the Python programming language.\\
+> It has tools for data mining (Google, Twitter and Wikipedia API, a web crawler, a HTML DOM parser), natural language processing (part-of-speech taggers, n-gram search, sentiment analysis, WordNet), machine learning (vector space model, clustering, SVM), network analysis and canvas visualization.
+
+Pattern由比利时安特卫普大学CLiPS实验室出品，它不仅仅是一套文本处理工具，更是一套web数据挖掘工具，囊括了数据抓取模块（包括Google, Twitter, 维基百科的API，以及爬虫和HTML分析器），文本处理模块（词性标注，情感分析等），机器学习模块(VSM, 聚类，SVM）以及可视化模块等，它的英文处理模块Pattern.en有很多很不错的文本处理功能，包括基础的tokenize, 词性标注，句子切分，语法检查，拼写纠错，情感分析，句法分析等。
