--- a/_posts/2019/start/2018-12-05-2019计划.md
+++ b/_posts/2019/start/2018-12-05-2019计划.md
@@ -20,9 +20,19 @@ tags:
 
 #### 读书
 
+读书，应该是一辈子的事，18年读书很少，而且都是杂书，希望19年可以多读些书，多读一些经典书。
+
+书单如下（慢慢补充）：
+
+* 大秦帝国
+
 #### 健身
 
+马上三十岁了，需要保持充沛的体力。
+
 #### 写作
+
+我希望自己能够有空多写博客，把自己的所学，自己的所长，都记录下来。
 
 #### 旅游
 
