--- a/_posts/2020/2020-03-04-es-notes.md
+++ b/_posts/2020/2020-03-04-es-notes.md
@@ -15,33 +15,23 @@ tags:
 
 ---
 
-> Elasticsearch（简称ES）是一个分布式、可扩展、实时的搜索与数据分析引擎。ES不仅仅只是全文搜索，还支持结构化搜索、数据分析、复杂的语言处理、地理位置和对象间关联关系等。
+> Elasticsearch（简称ES）是一个分布式、可扩展、实时的搜索与数据分析引擎。ES不仅仅只是全搜索，还支持结构化搜索、数据分析、复杂的语言处理、地理位置和对象间关联关系等。
 
 ### 1、包含 Mapping 的 template 设计万能模板
 
-```json
+```
 
 {
     "index_patterns":[
-
         "test_index_*",
-
         "test_*"
-
     ],
-
     "settings":{
-
         "number_of_shards":1,
-
         "number_of_replicas":1,
-
         "max_result_window":100000,
-
         "refresh_interval":"30s"
-
     },
-    
     "mappings":{
         "properties":{
             "id":{
