--- a/_posts/2020/2020-03-04-es-notes.md
+++ b/_posts/2020/2020-03-04-es-notes.md
@@ -1,7 +1,7 @@
 ---
 layout:     post
 title:      "es 笔记"
-subtitle:   "elastic search"
+subtitle:   "2020-03-04 elastic search"
 date:       2020-03-04
 author:     "msg"
 header-img: "img/posts/02.jpg"
