--- a/_posts/2018-12-02-python.md
+++ b/_posts/2018-12-02-python.md
@@ -1,7 +1,7 @@
 ---
 layout:     post
-title:      "03、python notes"
-subtitle:   "Python学习笔记"
+title:      "03、python笔记"
+subtitle:   "python notes"
 date:       2018-12-02
 author:     "msg"
 header-img: "img/posts/03.jpg"
