--- a/_posts/2019-01-11-math.md
+++ b/_posts/2019-01-11-math.md
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:      "05、数学笔记"
+title:      "05、math笔记"
 subtitle:   "math notes"
 date:       2019-01-11
 author:     "msg"
