--- a/_posts/2019-04-23-linux.md
+++ b/_posts/2019-04-23-linux.md
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:      "06、linux 笔记"
+title:      "06、linu笔记"
 subtitle:   "linux"
 date:       2019-04-23
 author:     "msg"
