--- a/_posts/2020-02-06-math.md
+++ b/_posts/2020-02-06-math.md
@@ -20,7 +20,7 @@ tags:
 
 ## 01、泰勒展开式
 
-[知乎解答](https://www.zhihu.com/question/25627482)
+> [知乎解答](https://www.zhihu.com/question/25627482)
 
 * 当我们想要仿造一个东西的时候，无形之中都会按照上文提到的思路，即先保证大体上相似，再保证局部相似，再保证细节相似，再保证更细微的地方相似……不断地细化下去，无穷次细化以后，仿造的东西将无限接近真品。真假难辨。
 
