--- a/_posts/2020-02-06-math.md
+++ b/_posts/2020-02-06-math.md
@@ -27,3 +27,7 @@ tags:
 * 物理学家得出结论：把生活中关于“仿造”的经验运用到运动学问题中，如果想仿造一段曲线，那么首先应该保证曲线的起始点一样，其次保证起始点处位移随时间的变化率一样（速度相同），再次应该保证前两者相等的同时关于时间的二阶变化率一样（加速度相同）……如果随时间每一阶变化率（每一阶导数）都一样，那这俩曲线肯定是完全等价的。
 
 * 一位数学家，泰勒，某天看到一个函数$$y = e^{x}$$,不由地眉头一皱，心里面不断地犯嘀咕：有些函数啊，他就是很恶心，比如这种，还有三角函数，这样的函数本来具有很优秀的品质（可以无限次求导，而且求导还很容易），但是呢，如果是代入数值计算的话，就很难了。比如，看到$$y = cos(x)$$后，我无法很方便地计算$$x = 2$$时候的值。为了避免这种如鲠在喉的感觉，必须得想一个办法让自己避免接触这类函数，即把这类函数替换掉。
+
+## 02、傅里叶变换公式
+
+> [`知乎解答`](https://www.zhihu.com/question/19714540/answer/514107420): 傅里叶变换其实就是把一团杂乱的东西，按照频率的不同依次分组。
