--- a/_posts/2020-02-08-es.md
+++ b/_posts/2020-02-08-es.md
@@ -95,3 +95,16 @@ tags:
 * 坑5：在给定时间的前提下，永远不会有完美的设计，必须相对合理的设计+重构结合，才会有相对靠谱的系统。
 * 坑6：SSD 能提升性能，但如果系统业务逻辑非常负责，换了 SSD 未必达到预期。
 * 坑7：由于 Elasticsearch 不支持事务 ACID 特性，数据库作为实时数据补充，对于实时数据要求严格的场景，必须同时采取双写或者同步的方式。这样，一旦实时数据出现不一致，可以通过数据库进行同步递增更新。
+
+
+### 3、评估es集群的规模
+
+1. 每天的写入的原始数据量多大？（不含副本）
+    - 多少条，每条多大？
+2. 峰值写入流量多少？
+3. 有冷热分离的需求吗？如果有，热和冷都要求副本吗？
+4. 查询场景是怎么样的？辛苦提供查询语句。如果有冷热场景需求，冷热的查询延迟分别要求多少？冷热查询的qps分别是多少？
+5. 索引mapping或者字段个数和大致的类型
+    -- 最好可以提供真实的doc
+6. 索引setting，refresh_interval为多大？
+7. 有个索引？数据源和推送方式（比如kafka+logstash）
