lstm math formula

--- a/_posts/2020-02-06-math.md
+++ b/_posts/2020-02-06-math.md
@@ -31,3 +31,20 @@ tags:
 ## 02、傅里叶变换公式
 
 > [`知乎解答`](https://www.zhihu.com/question/19714540/answer/514107420): 傅里叶变换其实就是把一团杂乱的东西，按照频率的不同依次分组。
+
+
+## 03、LSTM 数学公式
+
+$$ltm_t = remember_t \circ ltm_{t-1} + save_t \circ ltm'_t$$
+
+$$wm_t = focus_t \circ tanh(ltm_t)$$
+
+然后，每一步的机制如下：
+
+$$remember_t = \sigma(W_r x_t+  U_r wm_{t-1})$$
+
+$$save_t = \sigma(W_s x_t + U_s wm_{t-1})$$
+
+$$focus_t = \sigma(W_f x_t + U_f wm_{t-1})$$
+
+$$tm'_t = tanh(W_l x_t + U_l wm_{t-1})$$
