--- a/_posts/2020-02-07-linux.md
+++ b/_posts/2020-02-07-linux.md
@@ -120,3 +120,5 @@ curl -H "Content-Type:application/json" -X POST -d 'json data' URL
 curl -H "Content-Type:application/json" -X POST -d '{"user": "admin", "passwd":"12345678"}' http://127.0.0.1:8000/login
 ```
 
+### 5、gpu 查看
+
