lstm math formula

--- a/_posts/2020-02-06-math.md
+++ b/_posts/2020-02-06-math.md
@@ -35,11 +35,13 @@ tags:
 
 ## 03、LSTM 数学公式
 
+LSTM 的long term memory 和 working memory的公式更新如下：
+
 $$ltm_t = remember_t \circ ltm_{t-1} + save_t \circ ltm'_t$$
 
 $$wm_t = focus_t \circ tanh(ltm_t)$$
 
-然后，每一步的机制如下：
+其中，每一个子模块的计算公式如下：
 
 $$remember_t = \sigma(W_r x_t+  U_r wm_{t-1})$$
 
