lstm math formula

--- a/_posts/2020-02-06-math.md
+++ b/_posts/2020-02-06-math.md
@@ -49,4 +49,4 @@ $$save_t = \sigma(W_s x_t + U_s wm_{t-1})$$
 
 $$focus_t = \sigma(W_f x_t + U_f wm_{t-1})$$
 
-$$tm'_t = tanh(W_l x_t + U_l wm_{t-1})$$
+$$ltm'_t = tanh(W_l x_t + U_l wm_{t-1})$$
