--- a/_posts/2020-02-02-java.md
+++ b/_posts/2020-02-02-java.md
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:      "01、java笔记"
+title:      "java笔记"
 subtitle:   "java notes"
 date:       2018-08-23
 author:     "msg"
