--- a/_posts/2020-02-04-python.md
+++ b/_posts/2020-02-04-python.md
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:      "03、python笔记"
+title:      "python笔记"
 subtitle:   "python notes"
 date:       2018-12-02
 author:     "msg"
