--- a/_posts/2020-02-03-mysql.md
+++ b/_posts/2020-02-03-mysql.md
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:      "02、mysql笔记"
+title:      "mysql笔记"
 subtitle:   "mysql commands"
 date:       2018-12-02
 author:     "msg"
