--- a/_posts/2020-02-05-git.md
+++ b/_posts/2020-02-05-git.md
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:      "04、Git笔记"
+title:      "Git笔记"
 subtitle:   "git notes"
 date:       2018-12-07
 author:     "msg"
