--- a/_posts/2020-04-10-bp.md
+++ b/_posts/2020-04-10-bp.md
@@ -19,7 +19,7 @@ tags:
 
 该算法通过链式法则有效地训练神经网络。 简言之，神经网络在每次向前传播后，反向传播算法都会执行向后传播来调整模型的参数（权重和偏差）。
 
-![公式](../img/posts/bp/equ.png)
+![公式](/img/posts/bp/equ.png)
 
 基本的公式推导如下：
 
