--- a/_posts/2020-04-10-bp.md
+++ b/_posts/2020-04-10-bp.md
@@ -51,7 +51,7 @@ $
 
 $
 \begin{eqnarray}
-  \delta^l_j & = & \frac{\partial C}{\partial z^l_j} \tag{5}\\\\
+  \delta^l_j & = & \frac{\partial C}{\partial z^l_j} \tag{5}\\\\\\\\
   & = & \sum_k \frac{\partial C}{\partial z^{l+1}_k} \frac{\partial z^{l+1}_k}{\partial z^l_j} \tag{6}\\\\ 
   & = & \sum_k \frac{\partial z^{l+1}_k}{\partial z^l_j} \delta^{l+1}_k,
 \tag{7}\end{eqnarray}
