--- a/_posts/2020-04-10-bp.md
+++ b/_posts/2020-04-10-bp.md
@@ -61,6 +61,18 @@ $
 
 $
 \begin{eqnarray}
+ z^{l+1}_k = \sum_j w^{l+1}_{kj} a^l_j +b^{l+1}_k = \sum_j w^{l+1}_{kj} \sigma(z^l_j) +b^{l+1}_k.
+\tag{8}\end{eqnarray}
+$
+
+$
+\begin{eqnarray}
+ \frac{\partial z^{l+1}_k}{\partial z^l_j} = w^{l+1}_{kj} \sigma'(z^l_j).
+\tag{9}\end{eqnarray}
+$
+
+$
+\begin{eqnarray}
   \delta^l_j = \sum_k w^{l+1}_{kj}  \delta^{l+1}_k \sigma'(z^l_j).
 \tag{10}\end{eqnarray}
 $
