--- a/_posts/2020-02-06-math.md
+++ b/_posts/2020-02-06-math.md
@@ -52,3 +52,8 @@ $$save_t = \sigma(W_s x_t + U_s wm_{t-1})$$
 $$focus_t = \sigma(W_f x_t + U_f wm_{t-1})$$
 
 $$ltm'_t = tanh(W_l x_t + U_l wm_{t-1})$$
+
+
+## 04、postion encoding 数学公式
+
+$$\Large{PE_{(pos, 2i)} = sin(pos / 10000^{2i / d_{model}})} $$ $$\Large{PE_{(pos, 2i+1)} = cos(pos / 10000^{2i / d_{model}})} $$
