math: position encoding

--- a/_posts/2020-02-06-math.md
+++ b/_posts/2020-02-06-math.md
@@ -56,4 +56,6 @@ $$ltm'_t = tanh(W_l x_t + U_l wm_{t-1})$$
 
 ## 04、postion encoding 数学公式
 
+> update: 2020-04-28 
+
 $$\Large{PE_{(pos, 2i)} = sin(pos / 10000^{2i / d_{model}})} $$ $$\Large{PE_{(pos, 2i+1)} = cos(pos / 10000^{2i / d_{model}})} $$
