--- a/_posts/2020-02-08-es.md
+++ b/_posts/2020-02-08-es.md
@@ -108,3 +108,12 @@ tags:
     -- 最好可以提供真实的doc
 6. 索引setting，refresh_interval为多大？
 7. 有个索引？数据源和推送方式（比如kafka+logstash）
+
+
+### 4、es健康检查出错问题
+
+```
+
+http://***/_stats
+
+```
