--- a/_posts/2020-02-07-linux.md
+++ b/_posts/2020-02-07-linux.md
@@ -122,3 +122,8 @@ curl -H "Content-Type:application/json" -X POST -d '{"user": "admin", "passwd":"
 
 ### 5、gpu 查看
 
+```bash
+Driver: nvidia-smi
+Cuda:cat /usr/local/cuda/version.txt
+Cudnn: cat /usr/include/cudnn.h | grep CUDNN_MAJOR -A 2
+```
