--- a/_posts/2020-02-07-linux.md
+++ b/_posts/2020-02-07-linux.md
@@ -125,5 +125,5 @@ curl -H "Content-Type:application/json" -X POST -d '{"user": "admin", "passwd":"
 ```bash
 Driver: nvidia-smi
 Cuda:cat /usr/local/cuda/version.txt
-Cudnn: cat /usr/include/cudnn.h | grep CUDNN_MAJOR -A 2
+Cudnn: cat /usr/local/cuda/include/cudnn.h | grep CUDNN_MAJOR -A 2
 ```
