update es template

--- a/_posts/2020-02-08-es.md
+++ b/_posts/2020-02-08-es.md
@@ -22,15 +22,53 @@ tags:
 ```
 
 {
-    "index_patterns":[
-        "test_index_*",
-        "test_*"
-    ],
     "settings":{
-        "number_of_shards":1,
-        "number_of_replicas":1,
-        "max_result_window":100000,
-        "refresh_interval":"30s"
+        "analysis":{
+            "tokenizer":{
+                "common_ngram":{
+                    "type":"ngram",
+                    "min_gram":1,
+                    "max_gram":5
+                }
+            },
+            "char_filter":{
+                "common_remove_and_nowhitespace":{
+                    "type":"pattern_replace",
+                    "pattern":"[ ]",
+                    "replacement":""
+                }
+            },
+            "analyzer":{
+                "common_ngram":{
+                    "type":"custom",
+                    "char_filter":[
+                        "common_remove_and_nowhitespace"
+                    ],
+                    "tokenizer":"common_ngram",
+                    "filter":[
+                        "cjk_width",
+                        "lowercase"
+                    ]
+                }
+            }
+        },
+        "index":{
+            "search":{
+                "slowlog":{
+                    "threshold":{
+                        "fetch":{
+                            "debug":"500ms"
+                        },
+                        "query":{
+                            "warn":"1s"
+                        }
+                    }
+                }
+            },
+            "refresh_interval":"1s",
+            "number_of_shards":"5",
+            "number_of_replicas":"1"
+        }
     },
     "mappings":{
         "properties":{
@@ -50,26 +88,22 @@ tags:
                     }
                 }
             },
-            "available":{
-                "type":"boolean"
-            },
-            "review":{
-                "type":"nested",
-                "properties":{
-                    "nickname":{
-                        "type":"text"
-                    },
-                    "text":{
-                        "type":"text"
-                    },
-                    "stars":{
-                        "type":"integer"
+            "nickname":{
+                "type":"text",
+                "analyzer":"common_ngram",
+                "search_analyzer":"common_ngram",
+                "fields":{
+                    "keyword":{
+                        "type":"keyword"
                     }
                 }
             },
+            "available":{
+                "type":"boolean"
+            },
             "publish_time":{
                 "type":"date",
-                "format":"yyyy-MM-dd HH:mm:ss||yyyy-MM-dd||epoch_millis"
+                "format":"yyyy-MM-dd HH:mm:ss"
             },
             "expected_attendees":{
                 "type":"integer_range"
