update git notes

--- a/_posts/2020-02-05-git.md
+++ b/_posts/2020-02-05-git.md
@@ -1007,3 +1007,15 @@ $ git reset --hard ORIG_HEAD 用来撤销已经commit 的merge.
 $ git reset --hard HEAD 用来撤销还没commit 的merge,其实原理就是放弃index和工作区的改动。
 
 git reset --merge ORIG_HEAD，注意其中的--hard 换成了 --merge，这样就可以避免在回滚时清除working tree。
+
+### 27、删除github之前的commit保留当前最新代码
+
+删除.git文件夹可能会导致git存储库中的问题。如果要删除所有提交历史记录，但将代码保持在当前状态，可以按照以下方式安全地执行此操作：
+
+1. 尝试运行 `git checkout --orphan latest_branch`
+2. 添加所有文件: `git add -A`
+3. 提交更改: `git commit -am "commit message"`
+4. 删除分支: `git branch -D master`
+5. 将当前分支重命名: `git branch -m master`
+6. 最后，强制更新存储库: `git push -f origin master`
+
